1. reset password email template change 2. reset password url

--- a/core/reset_password_email_template.html
+++ b/core/reset_password_email_template.html
@@ -7,7 +7,7 @@
 <body>
 <div>
         Click on link below to reset password:
-        {{ url }}
+        <a href="{{ url }}">Password Reset</a>
 </div>
 </body>
 </html>
